name error fixed

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,9 @@ lib/pointnet2/dist/
 lib/pointnet2/pointnet2.egg-info/
 
 # output
-
+outputs/
+!outputs/pretrained_VoteNet
+!outputs/pretrained_3DETR
 
 # delete
 docs/.DS_Store
